# image_extractor

./: .dockerignore  .gitignore  Dockerfile  config.py  image_downloader.py  main.py  pyproject.toml  schemas.py  uploader.py
tests/: test_get_image_content.py  test_image_downloader.py  test_save_file.py
