[project]
name = "image-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.119.0",
    "google-cloud-storage>=3.4.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",         # add project root to sys.path
]
testpaths = [
    "tests",     # where pytest should look for tests
]
